v0/book/content/pages/source-code/apps/Invoices/Home.md

# 
# Invoices

## Namespaces

### \Hubleto\App\Community\Invoices

#### Classes

| Class                                                                         | Description |
|-------------------------------------------------------------------------------|-------------|
| [`Loader`](./classes/Hubleto/App/Community/Invoices/Loader)                   |             |
| [`PriceCalculator`](./classes/Hubleto/App/Community/Invoices/PriceCalculator) |             |
| [`Workflow`](./classes/Hubleto/App/Community/Invoices/Workflow)               |             |

### \Hubleto\App\Community\Invoices\Controllers

#### Classes

| Class                                                                       | Description |
|-----------------------------------------------------------------------------|-------------|
| [`Invoices`](./classes/Hubleto/App/Community/Invoices/Controllers/Invoices) |             |
| [`Payments`](./classes/Hubleto/App/Community/Invoices/Controllers/Payments) |             |
| [`Profiles`](./classes/Hubleto/App/Community/Invoices/Controllers/Profiles) |             |

### \Hubleto\App\Community\Invoices\Controllers\Api

#### Classes

| Class                                                                                 | Description |
|---------------------------------------------------------------------------------------|-------------|
| [`GeneratePdf`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/GeneratePdf) |             |

### \Hubleto\App\Community\Invoices\Extendibles

#### Classes

| Class                                                                     | Description |
|---------------------------------------------------------------------------|-------------|
| [`AppMenu`](./classes/Hubleto/App/Community/Invoices/Extendibles/AppMenu) |             |

### \Hubleto\App\Community\Invoices\Models

#### Classes

| Class                                                                                | Description |
|--------------------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/Invoice)                 |             |
| [`InvoiceDocument`](./classes/Hubleto/App/Community/Invoices/Models/InvoiceDocument) |             |
| [`InvoiceItem`](./classes/Hubleto/App/Community/Invoices/Models/InvoiceItem)         |             |
| [`Payment`](./classes/Hubleto/App/Community/Invoices/Models/Payment)                 |             |
| [`Profile`](./classes/Hubleto/App/Community/Invoices/Models/Profile)                 |             |

### \Hubleto\App\Community\Invoices\Models\Dto

#### Classes

| Class                                                                    | Description |
|--------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/Dto/Invoice) |             |

### \Hubleto\App\Community\Invoices\Models\RecordManagers

#### Classes

| Class                                                                                               | Description |
|-----------------------------------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Invoice)                 |             |
| [`InvoiceDocument`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/InvoiceDocument) |             |
| [`InvoiceItem`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/InvoiceItem)         |             |
| [`Payment`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Payment)                 |             |
| [`Profile`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Profile)                 |             |
