v1/book/content/pages/source-code/apps/Invoices/Home.md

# 
# Invoices

## Namespaces

### \Hubleto\App\Community\Invoices

#### Classes

| Class                                                                         | Description |
|-------------------------------------------------------------------------------|-------------|
| [`Counter`](./classes/Hubleto/App/Community/Invoices/Counter)                 |             |
| [`Loader`](./classes/Hubleto/App/Community/Invoices/Loader)                   |             |
| [`PriceCalculator`](./classes/Hubleto/App/Community/Invoices/PriceCalculator) |             |
| [`Workflow`](./classes/Hubleto/App/Community/Invoices/Workflow)               |             |

### \Hubleto\App\Community\Invoices\Controllers

#### Classes

| Class                                                                                   | Description |
|-----------------------------------------------------------------------------------------|-------------|
| [`Invoices`](./classes/Hubleto/App/Community/Invoices/Controllers/Invoices)             |             |
| [`Items`](./classes/Hubleto/App/Community/Invoices/Controllers/Items)                   |             |
| [`PaymentMethods`](./classes/Hubleto/App/Community/Invoices/Controllers/PaymentMethods) |             |
| [`Payments`](./classes/Hubleto/App/Community/Invoices/Controllers/Payments)             |             |
| [`Profiles`](./classes/Hubleto/App/Community/Invoices/Controllers/Profiles)             |             |

### \Hubleto\App\Community\Invoices\Controllers\Api

#### Classes

| Class                                                                                                                     | Description |
|---------------------------------------------------------------------------------------------------------------------------|-------------|
| [`CreateInvoiceFromOrder`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/CreateInvoiceFromOrder)               |             |
| [`CreateInvoiceFromPreparedItem`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/CreateInvoiceFromPreparedItem) |             |
| [`LinkPreparedItem`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/LinkPreparedItem)                           |             |
| [`SendInvoiceInEmail`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/SendInvoiceInEmail)                       |             |
| [`UnlinkPreparedItem`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/UnlinkPreparedItem)                       |             |
| [`GeneratePdf`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/GeneratePdf)                                     |             |
| [`GetPreviewHtml`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/GetPreviewHtml)                               |             |
| [`GetPreviewVars`](./classes/Hubleto/App/Community/Invoices/Controllers/Api/GetPreviewVars)                               |             |

### \Hubleto\App\Community\Invoices\Extendibles

#### Classes

| Class                                                                     | Description |
|---------------------------------------------------------------------------|-------------|
| [`AppMenu`](./classes/Hubleto/App/Community/Invoices/Extendibles/AppMenu) |             |

### \Hubleto\App\Community\Invoices\Models

#### Classes

| Class                                                                            | Description |
|----------------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/Invoice)             |             |
| [`Item`](./classes/Hubleto/App/Community/Invoices/Models/Item)                   |             |
| [`Payment`](./classes/Hubleto/App/Community/Invoices/Models/Payment)             |             |
| [`PaymentMethod`](./classes/Hubleto/App/Community/Invoices/Models/PaymentMethod) |             |
| [`Profile`](./classes/Hubleto/App/Community/Invoices/Models/Profile)             |             |

### \Hubleto\App\Community\Invoices\Models\Dto

#### Classes

| Class                                                                    | Description |
|--------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/Dto/Invoice) |             |

### \Hubleto\App\Community\Invoices\Models\Migrations

#### Classes

| Class                                                                                                 | Description |
|-------------------------------------------------------------------------------------------------------|-------------|
| [`Invoice_0001`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Invoice_0001)             |             |
| [`Invoice_0002`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Invoice_0002)             |             |
| [`Item_0001`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Item_0001)                   |             |
| [`Item_0002`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Item_0002)                   |             |
| [`Payment_0001`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Payment_0001)             |             |
| [`PaymentMethod_0001`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/PaymentMethod_0001) |             |
| [`Profile_0001`](./classes/Hubleto/App/Community/Invoices/Models/Migrations/Profile_0001)             |             |

### \Hubleto\App\Community\Invoices\Models\RecordManagers

#### Classes

| Class                                                                                           | Description |
|-------------------------------------------------------------------------------------------------|-------------|
| [`Invoice`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Invoice)             |             |
| [`Item`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Item)                   |             |
| [`Payment`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Payment)             |             |
| [`PaymentMethod`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/PaymentMethod) |             |
| [`Profile`](./classes/Hubleto/App/Community/Invoices/Models/RecordManagers/Profile)             |             |
